--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-
+<DOCTYPE Html>
+  <html>
+    <head>
+      <title>Sample Web Page</title>
+    </head>
+    <body>
+      <h1>Create GITHUB First Web Page Sample</h1>
+      <br>
+      <p>My name is Dilanka Madhubhanu.<br>
+      I'm undergraduate Student.<br> I'from Sri Lanka.</p>
+    </body>
+  </html>
