--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
       <h1>Create GITHUB First Web Page Sample</h1>
       <br>
       <p>My name is Dilanka Madhubhanu.<br>
-      I'm undergraduate Student.<br> I'from Sri Lanka.</p>
+      I'm undergraduate Student.<br> I'from Sri Lanka.<br>My future ambition is to become an IT professional among the top 10 in Sri Lanka.</p>
     </body>
   </html>
